tests/sqllogic/sdb/pg/index/offsets.test
statement ok
CREATE TABLE offsets_test (id INTEGER PRIMARY KEY, title VARCHAR, body VARCHAR, wordcount INTEGER);

statement ok
CREATE TEXT SEARCH DICTIONARY offsets_en(
    template = 'text',
    locale = 'en_US.UTF-8',
    case = 'none',
    stemming = false,
    accent = false,
    frequency = true,
    position = true,
    offset = true
);

statement ok
CREATE INDEX offsets_test_idx ON offsets_test
    USING inverted(title offsets_en, body offsets_en, wordcount);

statement ok
INSERT INTO offsets_test VALUES (1, 'hello world', 'quick fox jumps', 3);

statement ok
INSERT INTO offsets_test VALUES (2, 'hello again', 'fox runs fast', 3);

statement ok
INSERT INTO offsets_test VALUES (3, 'world peace', 'quick cat jumps', 3);

statement ok
INSERT INTO offsets_test VALUES (4, 'good day', 'fox fox fox fox fox fox fox fox fox fox fox fox', 12);

statement ok
VACUUM (UPDATE_INDEXES) offsets_test;

statement ok
CREATE TABLE offsets_test2 (id INTEGER PRIMARY KEY, body VARCHAR);

statement ok
CREATE INDEX offsets_test2_idx ON offsets_test2 USING inverted(id, body offsets_en);

statement ok
INSERT INTO offsets_test2 VALUES (1, 'fox'), (2, 'cat');

statement ok
VACUUM (UPDATE_INDEXES) offsets_test2;

query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id;
----
id	bo
1	{6,9}
2	{0,3}
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}

query
SELECT id, OFFSETS(offsets_test_idx.body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id;
----
id	bo
1	{6,9}
2	{0,3}
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}


query
EXPLAIN SELECT id, OFFSETS(offsets_test_idx.body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id;
----
QUERY PLAN
┌───────────────────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│  offsets_test_idx.id ASC  │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│           Index:          │
│      offsets_test_idx     │
│                           │
│      Lookup: rocksdb      │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│       Offsets: body       │
│                           │
│        Projections:       │
│             id            │
│ sdb_inverted_index_offsets│
│             $2            │
│                           │
│          ~4 rows          │
└───────────────────────────┘


query
SELECT id, OFFSETS(title) AS to_, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE title @@ ts_phrase('hello') AND body @@ ts_phrase('fox')
ORDER BY id;
----
id	to_	bo
1	{0,5}	{6,9}
2	{0,5}	{0,3}


query
SELECT id, OFFSETS(body, 0) AS bo
FROM offsets_test_idx
WHERE body @@ 'fox'
ORDER BY id;
----
id	bo
1	{6,9}
2	{0,3}
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39,40,43,44,47}


query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ('fox'::TSQUERY || 'quick'::TSQUERY)
ORDER BY id;
----
id	bo
1	{0,5,6,9}
2	{0,3}
3	{0,5}
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}


query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox') AND body @@ ts_phrase('quick')
ORDER BY id;
----
id	bo
1	{0,5,6,9}

query
SELECT id, OFFSETS(title) AS to_
FROM offsets_test_idx
WHERE title @@ ts_phrase('hello') OR title @@ ts_phrase('world')
ORDER BY id;
----
id	to_
1	{0,5,6,11}
2	{0,5}
3	{0,5}

query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY OFFSETS(body), id;
----
id	bo
2	{0,3}
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}
1	{6,9}

query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY bo, id;
----
id	bo
2	{0,3}
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}
1	{6,9}

query
SELECT id, OFFSETS(body, 3) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id;
----
id	bo
1	{6,9}
2	{0,3}
4	{0,3,4,7,8,11}

query
SELECT id, OFFSETS(body, 1) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id;
----
id	bo
1	{6,9}
2	{0,3}
4	{0,3}

query
SELECT id, length(OFFSETS(body, 0)) AS num_offsets
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox') AND id = 4;
----
id	num_offsets
4	24

query
SELECT id, OFFSETS(body, 2) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY OFFSETS(body, 2), id;
----
id	bo
2	{0,3}
4	{0,3,4,7}
1	{6,9}

query
SELECT id, b_offs FROM (
SELECT id, OFFSETS(body, 2) AS b_offs
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
) sub ORDER BY id;
----
id	b_offs
1	{6,9}
2	{0,3}
4	{0,3,4,7}


query
SELECT id, OFFSETS(wordcount) AS wo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id;
----
id	wo
1	{}
2	{}
4	{}


# Two sub-queries on the same index: first branch requests two offsets columns
# (title + body), second branch requests one (body only). Verifies that each
# DataSource receives only its own filtered and correctly ordered requests.
query
SELECT id, OFFSETS(title) AS title_offs, OFFSETS(body) AS body_offs
FROM offsets_test_idx
WHERE title @@ ts_phrase('hello') AND body @@ ts_phrase('fox')
UNION ALL
SELECT id, NULL::bigint[], OFFSETS(body)
FROM offsets_test_idx
WHERE body @@ ts_phrase('quick')
ORDER BY id, title_offs NULLS LAST;
----
id	title_offs	body_offs
1	{0,5}	{6,9}
1	NULL	{0,5}
2	{0,5}	{0,3}
3	NULL	{0,5}


# Same scenario with branches swapped: first branch requests one offsets column
# (body only), second branch requests two (title + body). Verifies correct
# filtering regardless of which branch accumulates requests first.
query
SELECT id, NULL::bigint[] AS title_offs, OFFSETS(body) AS body_offs
FROM offsets_test_idx
WHERE body @@ ts_phrase('quick')
UNION ALL
SELECT id, OFFSETS(title), OFFSETS(body)
FROM offsets_test_idx
WHERE title @@ ts_phrase('hello') AND body @@ ts_phrase('fox')
ORDER BY id, title_offs NULLS FIRST;
----
id	title_offs	body_offs
1	NULL	{0,5}
1	{0,5}	{6,9}
2	{0,5}	{0,3}
3	NULL	{0,5}


# Same field in both sub-queries but with different limits. Row id=4 has 12
# fox matches so the limit difference is visible in its output.
query
SELECT id, 2 AS lim, OFFSETS(body, 2) AS body_offs
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
UNION ALL
SELECT id, 4, OFFSETS(body, 4)
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id, lim;
----
id	lim	body_offs
1	2	{6,9}
1	4	{6,9}
2	2	{0,3}
2	4	{0,3}
4	2	{0,3,4,7}
4	4	{0,3,4,7,8,11,12,15}


query
EXPLAIN SELECT id, 2 AS lim, OFFSETS(body, 2) AS body_offs
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
UNION ALL
SELECT id, 4, OFFSETS(body, 4)
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY id, lim;
----
QUERY PLAN
┌───────────────────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             #0            │
│__internal_decompress_integ│
│     ral_integer(#1, 2)    │
│             #2            │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│          ORDER_BY         │
│    ────────────────────   │
│           id ASC          │
│          lim ASC          │
│                           │
│          ~0 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             #0            │
│__internal_compress_integra│
│     l_utinyint(#1, 2)     │
│             #2            │
│                           │
│          ~2 rows          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│           UNION           ├──────────────┐
└─────────────┬─────────────┘              │
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│         PROJECTION        ││         PROJECTION        │
│    ────────────────────   ││    ────────────────────   │
│             id            ││             id            │
│            lim            ││             4             │
│         body_offs         ││             #1            │
│                           ││                           │
│           ~1 row          ││           ~1 row          │
└─────────────┬─────────────┘└─────────────┬─────────────┘
┌─────────────┴─────────────┐┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      ││       IRESEARCH_SCAN      │
│    ────────────────────   ││    ────────────────────   │
│           Index:          ││           Index:          │
│      offsets_test_idx     ││      offsets_test_idx     │
│                           ││                           │
│      Lookup: rocksdb      ││      Lookup: rocksdb      │
│                           ││                           │
│          Filter:          ││          Filter:          │
│ AND[PHRASE[body(string) = ││ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   ││    <Term:fox(0, 0); >]]   │
│                           ││                           │
│       Offsets: body       ││       Offsets: body       │
│                           ││                           │
│        Projections:       ││        Projections:       │
│             id            ││             id            │
│ sdb_inverted_index_offsets││ sdb_inverted_index_offsets│
│             $2            ││             $2            │
│                           ││                           │
│          ~4 rows          ││          ~4 rows          │
└───────────────────────────┘└───────────────────────────┘


query
SELECT offsets_test_idx.id, OFFSETS(offsets_test_idx.body) AS bo
FROM offsets_test_idx
JOIN offsets_test2_idx ON offsets_test_idx.id = offsets_test2_idx.id
WHERE offsets_test_idx.body @@ ts_phrase('fox') AND offsets_test2_idx.body @@ ts_phrase('fox')
ORDER BY offsets_test_idx.id;
----
id	bo
1	{6,9}


query
SELECT offsets_test_idx.id, OFFSETS(offsets_test2_idx.body) AS bo
FROM offsets_test_idx
JOIN offsets_test2_idx ON offsets_test_idx.id = offsets_test2_idx.id
WHERE offsets_test_idx.body @@ ts_phrase('fox') AND offsets_test2_idx.body @@ ts_phrase('fox')
ORDER BY offsets_test_idx.id;
----
id	bo
1	{0,3}


query error
SELECT OFFSETS() FROM offsets_test_idx WHERE body @@ ts_phrase('fox');


query error
SELECT OFFSETS(body, 5, 'extra') FROM offsets_test_idx WHERE body @@ ts_phrase('fox');


query error
SELECT OFFSETS('literal') FROM offsets_test_idx WHERE body @@ ts_phrase('fox');
----
db error: ERROR: OFFSETS() first argument must be a column reference


query error
SELECT OFFSETS(body, 'five') FROM offsets_test_idx WHERE body @@ ts_phrase('fox');
----
db error: ERROR: OFFSETS() second argument must be an integer literal


query error
SELECT OFFSETS(body, id) FROM offsets_test_idx WHERE body @@ ts_phrase('fox');
----
db error: ERROR: OFFSETS() second argument must be an integer literal


query error
SELECT OFFSETS(body, -1) FROM offsets_test_idx WHERE body @@ ts_phrase('fox');
----
db error: ERROR: OFFSETS() limit must be greater than zero or 0 for no limit


query error
SELECT OFFSETS(body, 3) AS bo3, OFFSETS(body, 5) AS bo5
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox');
----
db error: ERROR: OFFSETS() called multiple times for field 'body' with different limits


query error
SELECT OFFSETS(nonexistent) FROM offsets_test_idx WHERE body @@ ts_phrase('fox');
----
db error: ERROR: Referenced column "nonexistent" not found in FROM clause!
Candidate bindings: "body"


query error
SELECT OFFSETS(id) FROM offsets_test_idx WHERE body @@ ts_phrase('fox');
----
db error: ERROR: OFFSETS(): column 'id' not found in index


query error
SELECT OFFSETS(body) FROM offsets_test;
----
db error: ERROR: OFFSETS(body) requires an inverted index scan in the same sub-query


query error
SELECT OFFSETS(body) FROM offsets_test;
----
db error: ERROR: OFFSETS(body) requires an inverted index scan in the same sub-query


# Extract a context window around the first search hit using byte offsets.
# bo[1] and bo[2] are the 0-based start/end bytes of the first match; SUBSTRING
# is 1-based, so the window start is GREATEST(1, bo[1] + 1 - window) which
# simplifies to GREATEST(1, bo[1] - 3) for window=4.
query
SELECT id, SUBSTRING(body, GREATEST(1, bo[1] - 3), bo[2] - bo[1] + 8) AS context, bo
FROM (
  SELECT id, body, OFFSETS(body, 1) AS bo
  FROM offsets_test_idx
  WHERE body @@ ts_phrase('fox')
) sub
ORDER BY id;
----
id	context	bo
1	ick fox jum	{6,9}
2	fox runs fa	{0,3}
4	fox fox fox	{0,3}


# OFFSETS combined with top-K scoring (ORDER BY BM25 + LIMIT). This path was
# previously rejected by an SDB_ASSERT in the score_top_k branch; it now goes
# through WriteTopkOffsets, which walks the pagination slice in (segment,
# doc) order via WalkSegmentsSorted and writes byte ranges at each row's
# score-rank slot.

# Basic top-K + OFFSETS: ranks docs by BM25 over 'fox' and emits per-doc
# match offsets. Tie-break by id for determinism.
query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 3;
----
id	bo
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}
1	{6,9}
2	{0,3}


# Top-K + OFFSETS, has_real=false (no real columns selected -- the output
# is purely virtual: only OFFSETS and ranking). Exercises the WriteTopkOffsets
# path without the Materialize step.
query
SELECT OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC LIMIT 3;
----
bo
{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}
{6,9}
{0,3}


# Top-K + OFFSETS with LIMIT 1 -- smallest pagination slice.
query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 1;
----
id	bo
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}


# Top-K + multi-field OFFSETS. Both title and body have offset-enabled
# dicts; each row gets two ListVector entries.
query
SELECT id, OFFSETS(title) AS t, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE title @@ ts_phrase('hello') AND body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 5;
----
id	t	bo
1	{0,5}	{6,9}
2	{0,5}	{0,3}


# Top-K + OFFSETS with `OFFSETS(col, N)` cap. The N applies per row's
# byte-range list, not to the top-K K.
query
SELECT id, OFFSETS(body, 3) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 3;
----
id	bo
4	{0,3,4,7,8,11}
1	{6,9}
2	{0,3}


# Top-K + OFFSETS over an aggregation -- count(*) of the top-K result set.
# The wrapper subquery materialises the top-K + OFFSETS rows; count counts
# them. Verifies the subquery delivers the right number of rows.
query
SELECT count(*) FROM (
  SELECT OFFSETS(body) FROM offsets_test_idx
  WHERE body @@ ts_phrase('fox')
  ORDER BY BM25(offsets_test_idx.tableoid) DESC LIMIT 2
) sub;
----
count
2


# Top-K + OFFSETS where K exceeds the number of matches. Engine returns all
# matches (no padding/truncation).
query
SELECT id, OFFSETS(body) AS bo
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 100;
----
id	bo
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}
1	{6,9}
2	{0,3}


# Top-K + OFFSETS with a BM25-in-expression in SELECT (and bare BM25 in
# ORDER BY). DuckDB inserts an intermediate projection above TopN to
# materialise the ORDER BY value, which used to misalign OFFSETS()'s
# column ref against the GET.
query
SELECT id, OFFSETS(body) AS bo, BM25(offsets_test_idx.tableoid) > 0 AS pos
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 3;
----
id	bo	pos
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}	t
1	{6,9}	t
2	{0,3}	t


# Same intermediate-projection shape with BM25 wrapped in a cast.
query
SELECT id, OFFSETS(body) AS bo,
       round(BM25(offsets_test_idx.tableoid)::numeric, 2) AS s
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 3;
----
id	bo	s
4	{0,3,4,7,8,11,12,15,16,19,20,23,24,27,28,31,32,35,36,39}	0.76
1	{6,9}	0.53
2	{0,3}	0.53


# Plan check: secondary ORDER BY (id ASC) keeps the TopN node, producing
# the PROJECTION -> TOP_N -> PROJECTION -> IRESEARCH_SCAN shape. The
# inner projection forwards the offsets virtual column up to the outer.
query
EXPLAIN SELECT id, OFFSETS(body) AS bo,
              BM25(offsets_test_idx.tableoid) > 0 AS pos
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC, id LIMIT 3;
----
QUERY PLAN
┌───────────────────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             #0            │
│             #1            │
│             #2            │
│                           │
│           ~1 row          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│           TOP_N           │
│    ────────────────────   │
│           Top: 3          │
│                           │
│         Order By:         │
│          #3 DESC          │
│  offsets_test_idx.id ASC  │
│                           │
│           ~1 row          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             id            │
│             bo            │
│            pos            │
│             #1            │
│                           │
│           ~1 row          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│           Index:          │
│      offsets_test_idx     │
│                           │
│      Lookup: rocksdb      │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│       Offsets: body       │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│ sdb_inverted_index_offsets│
│             $2            │
│                           │
│          ~4 rows          │
└───────────────────────────┘


# Plan check: ORDER BY BM25 DESC alone -- top-K pull-up drops the TopN,
# leaving a single PROJECTION above the scan even with BM25-in-expression.
query
EXPLAIN SELECT id, OFFSETS(body) AS bo,
              BM25(offsets_test_idx.tableoid) > 0 AS pos
FROM offsets_test_idx
WHERE body @@ ts_phrase('fox')
ORDER BY BM25(offsets_test_idx.tableoid) DESC LIMIT 3;
----
QUERY PLAN
┌───────────────────────────┐
│         PROJECTION        │
│    ────────────────────   │
│             id            │
│             bo            │
│            pos            │
│                           │
│           ~1 row          │
└─────────────┬─────────────┘
┌─────────────┴─────────────┐
│       IRESEARCH_SCAN      │
│    ────────────────────   │
│           Index:          │
│      offsets_test_idx     │
│                           │
│      Lookup: rocksdb      │
│                           │
│          Filter:          │
│ AND[PHRASE[body(string) = │
│    <Term:fox(0, 0); >]]   │
│                           │
│           Score:          │
│    bm25(k1=1.2, b=0.75)   │
│                           │
│          TopK: 3          │
│       Offsets: body       │
│                           │
│        Projections:       │
│             id            │
│  sdb_inverted_index_score │
│ sdb_inverted_index_offsets│
│             $2            │
│                           │
│          ~4 rows          │
└───────────────────────────┘


statement ok
DROP TABLE offsets_test;

statement ok
DROP TABLE offsets_test2;

statement ok
DROP TEXT SEARCH DICTIONARY offsets_en;
